[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/enemies/slimes/slime_purple/slimePurple.png" type="Texture2D" id=1]
[ext_resource path="res://sprites/enemies/slimes/slime_purple/slimePurple_hit.png" type="Texture2D" id=2]
[ext_resource path="res://sprites/enemies/slimes/slime_purple/slimePurple_dead.png" type="Texture2D" id=3]
[ext_resource path="res://sprites/enemies/slimes/slime_purple/slimePurple_move.png" type="Texture2D" id=4]
[ext_resource path="res://enemies/enemy_slime.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "move",
"speed": 4.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
size = Vector2( 23.8024, 35 )

[sub_resource type="RectangleShape2D" id=3]
size = Vector2( 29, 6 )

[sub_resource type="RectangleShape2D" id=4]
size = Vector2( 46, 20 )

[node name="enemy_slime" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 35
script = ExtResource( 5 )

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 40 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="floor_checker" type="RayCast2D" parent="."]
enabled = true
target_position = Vector2( 0, 75 )
collision_mask = 2

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( 0, 10 )
shape = SubResource( 3 )

[node name="sides_checker" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( 0, 40 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
process_mode = 3
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
